[gd_scene load_steps=4 format=3 uid="uid://cik00gkhqg1yo"]

[ext_resource type="Script" path="res://src/components/2d/enemy/enemy.gd" id="1_x6o3f"]
[ext_resource type="Texture2D" uid="uid://bhbyduds1q76g" path="res://art/enemy.png" id="2_ub4q8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mtb4w"]
size = Vector2(54, 30)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 17
motion_mode = 1
script = ExtResource("1_x6o3f")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ub4q8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_mtb4w")

[node name="BulletSpawnPosition" type="Marker2D" parent="."]
position = Vector2(0, 25)

[node name="MovementTimer" type="Timer" parent="."]
autostart = true

[node name="ShootStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Enemy"

[node name="HitStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -5.0
bus = &"Enemy"

[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
[connection signal="finished" from="HitStreamPlayer" to="." method="_on_hit_stream_player_finished"]
